<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.Register1Activity">


    <Button
        android:id="@+id/next_rgstr1"
        android:enabled="false"
        android:layout_width="@dimen/nextbtn_width"
        android:layout_height="@dimen/nextbtn_height"
        android:layout_marginBottom="58dp"
        style="@style/BtnStyle"
        android:background="@drawable/btnbackground"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/next_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/beforebtn"
        android:layout_width="17dp"
        android:layout_height="15.8dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="56dp"
        android:background="@mipmap/before_foreground"
        android:textColor="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/reg_icon"
        android:layout_width="50dp"
        android:layout_height="66dp"
        android:text="🙋🏻‍♀"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="141dp"
        android:layout_marginTop="22dp"
        android:letterSpacing="-0.03"
        android:lineSpacingExtra="24sp"
        android:textColor="#454545"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/beforebtn"
        app:layout_constraintTop_toBottomOf="@+id/beforebtn"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/reg_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/noto_sans_bold"
        android:letterSpacing="-0.03"
        android:lineSpacingExtra="11sp"
        android:text="@string/reg_text1"
        android:textColor="#454545"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/reg_icon"
        app:layout_constraintTop_toBottomOf="@+id/reg_icon"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/reg_text2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/noto_sans_bold"
        android:letterSpacing="-0.03"
        android:lineSpacingExtra="6sp"
        android:text="@string/reg_text2"
        android:textColor="#747f89"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/reg_text1"
        app:layout_constraintTop_toBottomOf="@+id/reg_text1"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/reg_name"
        android:layout_width="356dp"
        android:layout_height="50dp"
        android:layout_marginTop="63dp"
        android:ems="10"
        android:fontFamily="@font/noto_sans_bold"
        android:hint="이름"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:textColorHint="#747f89"
        android:theme="@style/EditStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_text2" />

    <EditText
        android:id="@+id/reg_num1"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_marginTop="63dp"
        android:ems="10"
        android:fontFamily="@font/noto_sans_bold"
        android:gravity="center"
        android:hint="주민등록번호 앞자리"
        android:inputType="number"
        android:maxLength="6"
        android:textColorHint=" #747f89 "
        android:theme="@style/EditStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/reg_name"
        app:layout_constraintTop_toBottomOf="@+id/reg_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dot"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:letterSpacing="-0.03"
        android:lineSpacingExtra="9sp"
        android:text="-"
        android:textColor="#454545"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reg_num2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/reg_num1"
        app:layout_constraintTop_toBottomOf="@+id/reg_name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/reg_num2"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginTop="63dp"
        android:ems="10"
        android:gravity="center"
        android:hint="●"
        android:inputType="numberPassword"
        android:maxLength="1"
        android:textColor="#d3d3d3"
        android:textColorHint=" #747f89 "
        android:textSize="10sp"
        android:theme="@style/EditStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toEndOf="@+id/reg_num1"
        app:layout_constraintTop_toBottomOf="@+id/reg_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/encrypt"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:letterSpacing="1"
        android:text="●●●●●●"
        android:textColor="#2B2B2B"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/reg_num2"
        app:layout_constraintTop_toBottomOf="@+id/reg_name"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/nametag"
        android:layout_width="47dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_text2"
        app:layout_constraintVertical_bias="0.041"
        app:srcCompat="@mipmap/name_image_foreground" />

    <ImageView
        android:id="@+id/regnumtag"
        android:layout_width="118dp"
        android:layout_height="91dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_name"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/regnum_image_foreground" />


</androidx.constraintlayout.widget.ConstraintLayout>